classDiagram
    class Formation {
        +int id
        +string nom
        +string description
    }

    class Test {
        +int id
        +string nom
        +Date date_debut
        +Date date_fin
    }

    class Inscrit {
        +int id
        +string nom
        +string email
        +Date date_naiss
    }

    class Inscription {
        +int id
        +Date date
        +int test_id
        +int Inscrit_id
    }

    class Resultat {
        +int id
        +float score
        +string commentaire
    }

  

    class Question {
        +int id
        +string question_text
        +int test_id
    }

    class Option {
        +int id
        +string text
        +boolean is_correct
        +int question_id
    }

    Formation "1" -- "*" Test : contient
    Inscrit "1" -- "*" Inscription : s'inscrit
    Inscription "*" -- "1" Test : correspond à
    Inscription "*" -- "1" Inscrit : appartient à
    Resultat "1" -- "1" Inscription : évalue
    Test "1" -- "*" Question : contient
    Question "1" -- "*" Option : possède
